refine monitor codes